--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "dependencies": {
     "@picocss/pico": "^2.0.6",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
     "react": "^18.2.0",
