--- a/src/server/.env
+++ b/src/server/.env
@@ -1,2 +1,4 @@
 
 MONGO_URI=mongodb+srv://facundoledesma89:jOSwVHw0Hfs1Yohs@weatherapp.mkfsymc.mongodb.net/
+
+mongodb+srv://giselgiselrio63:<chivito09>@gestioncontable.46yy2gi.mongodb.net/?retryWrites=true&w=majority&appName=gestionContable
