--- a/src/server/.env
+++ b/src/server/.env
@@ -1,2 +1,4 @@
 
-MONGO_URI=mongodb+srv://facundoledesma89:jOSwVHw0Hfs1Yohs@weatherapp.mkfsymc.mongodb.net/
+
+MONGODB_URI="mongodb+srv://facundoledesma89:jOSwVHw0Hfs1Yohs@weatherapp.mkfsymc.mongodb.net/Triunviffy?retryWrites=true&w=majority"
+console.log(process.env.MONGODB_URI);
